<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General strings   -->
    <string name="img_content_description">img</string>
    <string name="label_home">Home TTI2 SDK</string>
    <string name="toolbar_title_tti">Jelajah Nusantara</string>
    <string name="progress">Progress</string>
    <string name="event">Event</string>
    <string name="daily">Daily</string>
    <string name="boosters">Boosters</string>
    <string name="missions">Missions</string>
    <string name="tier_gold">Gold Tier</string>
    <string name="km_unit">km</string>
    <string name="not_available_yet">Function not available</string>
    <string name="invalid_url">Invalid URL link</string>
    <string name="text_count" formatted="false">%d/%d</string>

    <!-- Screen Avatar Activity + Internal Fragments   -->
    <string name="txt_profile_label">Profile</string>
    <string name="btn_randomize_label">Randomize</string>
    <string name="save_changes">Save Changes</string>
    <string name="head">Head</string>
    <string name="shoes">Shoes</string>
    <string name="ride">Ride</string>
    <string name="clothes">Clothes</string>
    <string name="your_avatar_profile_has_unsaved_changes">Your avatar profile has unsaved changes</string>
    <string name="do_you_want_to_keep_the_changes_you_made">Do you want to keep the changes you made?</string>
    <string name="keep_changes">Keep Changes</string>
    <string name="do_not_save">Do Not Save</string>
    <string name="btn_edit_avatar">Edit Avatar</string>
    <string name="label_journey">JOURNEY</string>

    <!-- Loading Box   -->
    <string name="label_please_wait">Please wait…"</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="skin_color">Skin Color</string>
    <string name="hair">Hair</string>
    <string name="eye_color">Eye Color</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="top">Top</string>
    <string name="bottoms">Bottoms</string>
    <string name="style">Style</string>

    <!-- Screen Splash Activity   -->
    <string name="versionLabel">Version:\n%1$s</string>
    <string name="label_roads_loading">Loading urls, token, roads…</string>
    <string name="label_cities_loading">Loading cities…</string>

    <!-- Screen Missions Activity   -->
    <string name="txt_missions_label">Missions</string>
    <string name="labelDailyMission">Earn KM every day by completing missions.</string>
    <string name="labelSkipAdventure">Skip this adventure</string>
    <string name="labelSkipWarning">You can skip once every month</string>
    <string name="dailyMissionCompleted">Daily mission completed !</string>
    <string name="dailyMissionRedeemed">Daily mission redeemed !</string>

    <!-- Screen Daily Checkup Activity   -->
    <string name="txt_daily_checkup">Daily Checkup</string>
    <string name="btn_doItLater">Do it later"</string>
    <string name="labelEducationalMission">Educational Mission</string>
    <string name="labelQuizMission">Quiz Mission</string>
    <string name="labelSurveyMission">Survey Mission</string>

    <!-- Screen LeaderBoard Activity   -->
    <string name="txt_leaderboard_label">LeaderBoard</string>
    <string name="txt_tab_all_time">All Time</string>
    <string name="txt_tab_today">Today</string>
    <string name="txt_tab_week">Week</string>
    <string name="txt_tab_month">Month</string>
    <string name="label_your_place">Your Place</string>
    <string name="label_your_place_today">Your Place today</string>
    <string name="label_your_place_week">Your Place this week</string>
    <string name="label_your_place_month">Your Place this month</string>

    <!-- Screen Prizes Activity -->
    <string name="txt_prizes_label">Prizes</string>

    <!--    Screen Onboarding/Help Activity -->
    <string name="txt_help_label">Game Help</string>
    <string name="txt_help_labelFigma">Jelajah Nusantara</string>
    <string name="txt_help_title">Welcome to Jelajah \nNusantara\!</string>
    <string name="txt_help_Skip"><u>Skip</u></string>
    <string name="txt_help_titleDescription">SplashImage</string>
    <string name="txt_help_description">You are about to start an exceptional and journey through Indonesia 🇮🇩 and discover some of the world\'s most incredible places 🗺.</string>
    <string name="txt_help_RulesAndPrizes"><u>Rules &amp; Prizes</u></string>
    <string name="txt_terms_warning">"Terms &amp; Conditions must be checked before start !!!"</string>
    <string name="txt_help_LetsStart">Let\'s start</string>
    <string name="txt_help_AcceptTerms">I agree to the <u>terms &amp; conditions</u></string>
    <string name="txt_help_titleMissions">Complete Missions 💎 \nto progress!</string>
    <string name="txt_help_descriptionMissions">We\'ll challenge daily to complete varied and fun missions, that go from quizzes 🧐 to mini games 🕹. You\'ll quickly earn km to progress your journey 🛵.</string>
    <string name="txt_help_titlePrizes">Reach destinations \nto win prizes\!</string>
    <string name="txt_help_descriptionPrizes">For each new Destination you reach 🏁 there will be new prizes waiting for you 🎁. From points to vouchers or free data, we\'ll always have a special treat to commemorate 🎉.</string>
    <string name="txt_help_titleRupiahForKM">Spend Rupiah \nand win Km</string>
    <string name="txt_help_descriptionRupiahForKM">When you spend money 💰 on your MyTelkomsel app you\'ll be able to unlock boosters 🚀 that will win you km to progress faster.Don\'t forget to check them on the Mission Boosters 😉</string>
    <string name="txt_help_titleEvents">Watch out for our Special Events</string>
    <string name="txt_help_descriptionEvents">Every month there will be a new ✨ special event to commemorate. These will have extra special Games  to play and the best rewards 🏆.</string>
    <string name="txt_help_titleTiers">Check-in on Telkomsel days \nand win tier rewards</string>
    <string name="txt_help_descriptionTiers">Every month we have a special Telkomsel day 🗓 with extra missions and rewards that are higher depending on your customer tier 🪜. Platinum get up to 4x bigger rewards.</string>
    <string name="txt_help_title_ready_travel">Let`s get your ready \nto travel!</string>
    <string name="txt_help_description_ready_travel"> Before you start your journey, we`ll need you to look your best self 💇‍♂️, pack your belongings 🧳 and choose your favourite ride 🛵 to get on the road.</string>
    <string name="txt_help_startAvatar">Create my profile</string>
    <string name="termsAndConditionsURL">https://webportals.cachefly.net/apac/indonesia/telkomsel/tti_v2/html/termsAndConditions.html</string>
    <string name="rulesAndPrizesURL">https://webportals.cachefly.net/apac/indonesia/telkomsel/tti_v2/html/prizesAndRules.html</string>
    <string name="txt_help_webview">Help</string>

    <!-- Screen Destinations Activity  -->
    <string name="txt_destinations_label">Destinations</string>
    <string name="txt_prize">Prize</string>
    <string name="btn_all_prizes">All Prizes > </string>
    <string name="txt_around_here">Around Here</string>
    <string name="rd_prize_all">ALL</string>
    <string name="rd_prize_foods">FOODS</string>
    <string name="rd_prizes_sights">SIGHTS</string>
    <string name="rd_prizes_stays">STAYS</string>
    <string name="city_id">ID/CityNumber: %1$s/ %1$s</string>
    <string name="txtSubtitleTrivia">Trivia</string>
    <string name="txtFindMore">Find out more -></string>
    <string name="txtWikipdia">Wikipeda</string>
    <string name="txtShare">Waiting for you in %s. In the meantime, I already discovered some restaurants, monuments and hotels in the area with MyTelkomsel - Jelajah Nusantara.\nJoin me on http://tsel.id/jn2</string>
    <string name="prize_web_site">Webtsites</string>
    <string name="prize_news">News</string>
    <string name="prize_videos">Videos</string>


    <!-- Menu avatar  -->
    <string name="game_help">Game Help</string>
    <string name="replay_onboarding">Replay Onboarding</string>

    <!-- Dialogs  -->
    <string name="title_one">Something went wrong\!</string>
    <string name="title_two">You have no data connection\!</string>
    <string name="message_one">Please try reloading, if it still doesn\'t work try closing and opening the app again\!</string>
    <string name="message_two">Please turn on your mobile data or wifi connection and try again.</string>
    <string name="btn_one">Reload</string>
    <string name="btn_two">Try Again</string>
    <string name="share">Share</string>
    <string name="share_with_your_friends_how_you_travel_in_style_throughout_indonesia">Share with your friends how you travel in style throughout Indonesia.</string>
    <string name="share_my_profile">Share my profile</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <!-- Prizes History -->
    <string name="review_all_of_your_won_km_and_prize_history">Review all of your won km and prize history</string>
    <string name="you_have_successfully_redeemed_your_prize">You have successfully redeemed your prize</string>
    <string name="telkomsel_will_get_in_touch_with_you_shortly_to_send_you_your_reward">Telkomsel will get in touch with you shortly to send you your reward.</string>
    <string name="zalora_voucher">Zalora Voucher</string>
    <string name="valid_until_30_dec_2023">Valid until 30 DEC 2023</string>
    <string name="redeem">Redeem</string>

    <!-- Drawers Fist Mission-->
    <string name="title_first_mission">Your first mission</string>
    <string name="title_end_mission">Great Job!</string>
    <string name="message_first_mission">Let\'s start the journey by giving you your first mission.\nYou will always get rewards for every mission you finish.</string>
    <string name="message_message_mission">You finished your very first mission and are ready to take your moped out of the garage and travel to your first destination.</string>
    <string name="preparation">PREPARATION</string>
    <string name="create_your_profile">Create your profile on Jelajah Nusantara</string>
    <string name="registration">Registration</string>
    <string name="adventure">Adventure</string>
    <string name="complete">Complete</string>
    <string name="top_to_collect">Top to Collect</string>
    <string name="end_mission_tile">Arrive at your first destination</string>
    <string name="end_mission_message">Your mission km allow you to progress and win rewards</string>

    <!-- Destination-->
    <string name="about">About</string>
    <string name="background">Background</string>


</resources>