<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".ui.onboarding.HelpTierRewardsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/tiersRewardsSplashImage"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="334dp"
            android:background="@drawable/help_tier_rewards_splash_image"
            android:contentDescription="@string/img_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/helpTitle"
            android:layout_width="304dp"
            android:layout_height="64dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="365dp"
            android:layout_marginRight="31dp"
            android:layout_marginBottom="265dp"
            android:text="@string/txt_help_titleTiers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/helpDescription"
            android:layout_width="290dp"
            android:layout_height="88dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="440dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="166dp"
            android:text="@string/txt_help_descriptionTiers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>