<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnBoardingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerHelpButtons"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBackHelp"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/img_content_description"
            android:focusable="true"
            android:paddingHorizontal="20dp"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtHelpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/telkomsel_batik_sans_bold"
            android:text="@string/txt_help_labelFigma"
            android:textColor="@color/blue_dark"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/btnBackHelp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnBackHelp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="262dp"
        android:background="@drawable/background_help_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerFirstHelpPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerHelpButtons"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imgMainHelp"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:background="@drawable/logo_help_activity"
            android:contentDescription="@string/txt_help_titleDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtHelpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/telkomsel_batik_sans_regular"
            android:gravity="center"
            android:lineSpacingExtra="3sp"
            android:text="@string/txt_help_title"
            android:textColor="@color/all_white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgMainHelp"
            tools:text="@string/txt_help_title"/>

        <TextView
            android:id="@+id/txtHelpDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/telkomsel_batik_sans_regular"
            android:gravity="center"
            android:lineSpacingExtra="4sp"
            android:text="@string/txt_help_description"
            android:textColor="@color/all_white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtHelpTitle"
            tools:text="@string/txt_help_description" />

        <CheckBox
            android:id="@+id/chkboxTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="303dp"
            android:buttonTint="@color/all_white"
            android:textColor="@color/all_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtHelpDescription"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/termsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:buttonTint="@color/all_white"
            android:fontFamily="@font/telkomsel_batik_sans_regular"
            android:gravity="start"
            android:text="@string/txt_help_AcceptTerms"
            android:textColor="@color/all_white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/chkboxTerms"
            app:layout_constraintStart_toEndOf="@id/chkboxTerms"
            app:layout_constraintTop_toTopOf="@id/chkboxTerms"
            tools:text="@string/txt_help_AcceptTerms" />

        <Button
            android:id="@+id/btnStart"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_btn_help_start"
            android:backgroundTint="@color/all_white"
            android:clickable="true"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_forward_red"
            android:focusable="true"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/txt_help_LetsStart"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/red_default"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chkboxTerms"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerOthersHelpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="90dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerHelpButtons"
        tools:visibility="visible">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/helpViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/txt_help_Skip"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerHelpButtons"/>

    <TextView
        android:id="@+id/txtRulesAndPrizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:paddingEnd="20dp"
        android:paddingBottom="8dp"
        android:text="@string/txt_help_RulesAndPrizes"
        android:textAllCaps="false"
        android:textColor="@color/all_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>